--- a/index.html
+++ b/index.html
@@ -1,13 +1,105 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tafels</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" defer></script>
+    <title>Rekenspel</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        #question {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+        .option {
+            display: inline-block;
+            padding: 10px 20px;
+            margin: 10px;
+            background-color: #f0f0f0;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .option:hover {
+            background-color: #ddd;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Rekenspel</h1>
+    <div id="question"></div>
+    <div id="options"></div>
+
+    <script>
+        // Functie om een willekeurig getal tussen min en max te genereren
+        function getRandomNumber(min, max) {
+            return Math.floor(Math.random() * (max - min + 1) + min);
+        }
+
+        // Functie om een willekeurige rekensom te genereren
+        function generateQuestion() {
+            var num1 = getRandomNumber(1, 10);
+            var num2 = getRandomNumber(1, 10);
+            var operator = ['+', '-', 'x'][getRandomNumber(0, 2)];
+            var answer;
+            switch (operator) {
+                case '+':
+                    answer = num1 + num2;
+                    break;
+                case '-':
+                    answer = num1 - num2;
+                    break;
+                case 'x':
+                    answer = num1 * num2;
+                    break;
+            }
+            return {
+                question: num1 + ' ' + operator + ' ' + num2 + ' = ?',
+                answer: answer
+            };
+        }
+
+        // Functie om de opties te genereren
+        function generateOptions(correctAnswer) {
+            var options = [correctAnswer];
+            while (options.length < 4) {
+                var randomOption = getRandomNumber(correctAnswer - 10, correctAnswer + 10);
+                if (options.indexOf(randomOption) === -1) {
+                    options.push(randomOption);
+                }
+            }
+            return options.sort(function() { return Math.random() - 0.5; });
+        }
+
+        // Functie om de vraag en opties op de pagina weer te geven
+        function displayQuestion() {
+            var questionObj = generateQuestion();
+            var options = generateOptions(questionObj.answer);
+
+            document.getElementById('question').textContent = questionObj.question;
+            var optionsDiv = document.getElementById('options');
+            optionsDiv.innerHTML = '';
+
+            options.forEach(function(option) {
+                var optionButton = document.createElement('button');
+                optionButton.classList.add('option');
+                optionButton.textContent = option;
+                optionButton.onclick = function() {
+                    if (option === questionObj.answer) {
+                        alert('Goed gedaan!');
+                    } else {
+                        alert('Fout! Het juiste antwoord was ' + questionObj.answer);
+                    }
+                    displayQuestion();
+                };
+                optionsDiv.appendChild(optionButton);
+            });
+        }
+
+        // Start het spel bij het laden van de pagina
+        displayQuestion();
+    </script>
 </body>
 </html>
